--- a/last-pass/src/components/shared/Header/Header.scss
+++ b/last-pass/src/components/shared/Header/Header.scss
@@ -7,3 +7,9 @@
     height: 50px;
     background-color: red;
 }
+
+.close-button {
+    width: 40px;
+    padding: 10px;
+    border-radius: 20px;
+}
