--- a/last-pass/src/components/shared/Card/Card.scss
+++ b/last-pass/src/components/shared/Card/Card.scss
@@ -1,23 +1,66 @@
-.container {
-    height: 300px;
-    width: 18%;
-    background-color: lightgrey;
+.border-wrap {
+    margin: 20px 30px;
+    background: linear-gradient(90deg, rgba(251,128,128,0.7175245098039216) 0%, rgba(204,129,228,0.4738270308123249) 47%, rgba(110,16,224,0.5466561624649859) 100%);
+    padding: 8px;
     border-radius: 6px;
-    border-top: 4px solid rgb(247, 135, 247);
-    box-shadow: 0px 0px 12px 0px rgba(0,0,0,0.65);
-    display: flex;
-    align-items: center;
-    flex-direction: column;
-    justify-content: space-around;
+    box-shadow: 5px 5px 12px 0 rgba(0,0,0,0.65);
     font-family: sans-serif;
 
-    .card-title {
-        font-size: 24px;
-        text-align: center;
-    }
+    .card-container {
+        height: 300px;
+        width: 300px;
+        border-radius: 6px;
+        background: white;
+        display: flex;
+        align-items: center;
+        flex-direction: column;
+        justify-content: space-around;
+        font-family: sans-serif;
 
-    .password-icon {
-        width: 100px;
-        height: 100px;
+        .card-title {
+            font-size: 24px;
+            text-align: center;
+            font-family: sans-serif;
+            margin: 0;
+        }
+
+        .password-icon {
+            width: 100px;
+            height: 100px;
+        }
+
+        .card-buttons,
+        .card-edit-button {
+            cursor: pointer;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            height: 40px;
+            width: 40px;
+            border-radius: 10px;
+            box-shadow: 0 0 2px 0 rgba(0,0,0,0.65);
+        }
+
+        .cards-wrapper {
+            display: flex;
+            align-items: center;
+            flex-direction: row;
+            justify-content: space-evenly;
+        }
+
+        .card-edit-button {
+            background: rgba(251,128,128,0.7175245098039216);
+            border-color: rgba(251, 128, 128, 0.911);
+        }
+
+        .card-copy-button {
+            background: rgba(204,129,228,0.4738270308123249);
+            border-color: rgba(203, 129, 228, 0.911);
+        }
+
+        .card-remove-button {
+            background: rgba(110,16,224,0.5466561624649859);
+            border-color: rgba(109, 16, 224, 0.918);
+        }
     }
 }
